--- a/Portal Hashtag/home-hashtag.css
+++ b/Portal Hashtag/home-hashtag.css
@@ -93,6 +93,7 @@ input::placeholder {
 .botao {
   display: inline-block;
   font-size: 2.4rem;
+  text-align: center;
   font-weight: 700;
   text-decoration: none;
   border-radius: 3rem;
@@ -157,23 +158,33 @@ nav ul {
 }
 
 .contem-filhos ul {
-  display: block;
+  display: none;
+  flex-flow: column;
+  gap: 0rem;
+  align-items: stretch;
+  width: max-content;
   position: absolute;
+  right: 0;
   background-color: white;
-  padding: 2rem;
-  border-radius: 2.5rem;
-  box-shadow: 0 0.21rem 0.4rem rgba(0, 0, 0, 0.1);
+  padding: 0.41rem 0rem;
+  border-radius: 2rem;
+  box-shadow: 0 0.21rem 0.4rem rgba(0, 0, 0, 0.15),
+    inset 0 0.27rem 0.1rem rgba(0, 0, 0, 0.1);
 }
 
-/* 
 .contem-filhos:hover ul {
-  display: block;
-  position: absolute;
-  
-  padding: 1.6rem;
-  border-radius: 1.6rem;
-  margin-top: 1.6rem;
-} */
+  display: flex;
+}
+
+.contem-filhos ul li {
+  border-bottom: solid 1px rgba(88, 88, 88, 0.205);
+  padding: 0.41rem 2rem;
+}
+
+.contem-filhos ul li:last-child {
+  border-bottom: 0;
+  padding: 0rem 2rem;
+}
 
 .item-lista-cabecalho a {
   color: #112e61;
@@ -201,6 +212,12 @@ nav ul {
   background-size: cover;
 }
 
+.container-hero {
+  display: flex;
+  gap: 3.12rem;
+  align-items: center;
+}
+
 .hero-botao {
   background-image: linear-gradient(180deg, #ff645e, #ff9253);
 }
@@ -212,12 +229,24 @@ nav ul {
 }
 
 .iframe-video {
-  display: none;
   aspect-ratio: 16/9;
-  width: 42rem;
   border-radius: 2.5rem;
+  width: 42rem;
+  flex: 5;
 }
 
+.hero-coluna {
+  display: flex;
+  flex-flow: column;
+  gap: 2rem;
+  flex: 6;
+}
+
+.botao-hero {
+  display: flex;
+  flex-flow: column;
+  gap: 1.6rem;
+}
 /* Seção Conteúdos Gratuitos */
 
 .secao-conteudos {
@@ -227,19 +256,51 @@ nav ul {
   background-size: cover;
 }
 
+.secao-gratuitos {
+  display: flex;
+  align-items: center;
+}
+.conteudos-gratuitos {
+  display: flex;
+  gap: 2rem;
+}
+.conteudos-texto {
+  display: flex;
+  flex-flow: column;
+  gap: 2rem;
+}
+
 .caixa-cursos-hashtag {
   position: relative;
   box-shadow: inset 0 0 0.8rem 0.1rem rgba(0, 0, 0, 0.15);
   border-radius: 2.5rem;
   padding: 2rem;
 }
+.caixa-cursos-hashtag ul {
+  display: flex;
+  flex-flow: column;
+  gap: 0.82rem;
+  margin-top: 2rem;
+}
 
 .caixa-gratuito-h3 {
   background-image: linear-gradient(90deg, #aa56e6, #6d42b9);
 }
+.caixas-cursos {
+  display: flex;
+  gap: 2rem;
+}
 
+.caixa-logos {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  margin-top: 2rem;
+}
 .circulo-logo-curso {
   display: inline-block;
+
   background-color: #e7e7e7;
   border-radius: 50%;
   box-shadow: inset 0 0 0.4rem 0.2rem rgba(0, 0, 0, 0.15);
