--- a/Portal Hashtag/home-hashtag.css
+++ b/Portal Hashtag/home-hashtag.css
@@ -32,6 +32,7 @@ h1 {
   font-size: 3.32rem;
   line-height: 1;
   font-weight: 600;
+  letter-spacing: 0.2rem;
 }
 
 h2 {
@@ -121,7 +122,7 @@ input::placeholder {
 .caixa-gratuito-h3,
 .caixa-blog-h2 {
   position: absolute;
-  top: 0;
+  top: -0.8rem;
   left: 50%;
   display: inline-block;
   padding: 0.42rem 1.6rem;
@@ -255,52 +256,60 @@ nav ul {
   background-repeat: no-repeat;
   background-size: cover;
 }
-
 .secao-gratuitos {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
 }
-.conteudos-gratuitos {
+
+.conteudos-titulos {
   display: flex;
-  gap: 2rem;
+  align-items: center;
+  justify-content: center;
+  gap: 1.02rem;
 }
-.conteudos-texto {
+
+.coteudo-caixa-logos {
+  display: flex;
+  gap: 0.82rem;
+}
+.img-conteudos {
+  max-width: 61rem;
+  flex: 45;
+  position: relative;
+  left: 4rem;
+  z-index: 1;
+}
+
+.conteudos-coluna {
   display: flex;
   flex-flow: column;
-  gap: 2rem;
+  align-items: center;
+  gap: 3.9rem;
+  flex: 55;
+}
+.caixas-cursos-hashtag {
+  display: flex;
+  gap: 3.1rem;
 }
 
 .caixa-cursos-hashtag {
+  display: flex;
+  flex-flow: column;
+  gap: 1.6rem;
+  align-items: center;
   position: relative;
   box-shadow: inset 0 0 0.8rem 0.1rem rgba(0, 0, 0, 0.15);
   border-radius: 2.5rem;
   padding: 2rem;
 }
-.caixa-cursos-hashtag ul {
-  display: flex;
-  flex-flow: column;
-  gap: 0.82rem;
-  margin-top: 2rem;
-}
 
 .caixa-gratuito-h3 {
   background-image: linear-gradient(90deg, #aa56e6, #6d42b9);
 }
-.caixas-cursos {
-  display: flex;
-  gap: 2rem;
-}
 
-.caixa-logos {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 1rem;
-  margin-top: 2rem;
-}
 .circulo-logo-curso {
   display: inline-block;
-
   background-color: #e7e7e7;
   border-radius: 50%;
   box-shadow: inset 0 0 0.4rem 0.2rem rgba(0, 0, 0, 0.15);
@@ -313,15 +322,16 @@ nav ul {
   width: 100%;
 }
 
-.img-conteudos {
-  width: 44rem;
-}
-
 .gratuito-realce {
   color: #7a40be;
   font-weight: 600;
 }
 
+.conteudos-lista-redessociais {
+  display: flex;
+  flex-flow: column;
+  gap: 0.65rem;
+}
 .gratuito-h3 {
   font-weight: 700;
 }
@@ -337,6 +347,12 @@ nav ul {
   line-height: 1.3;
   text-decoration: none;
   color: inherit;
+}
+
+.gratuito-link-lista li {
+  display: flex;
+  align-items: center;
+  gap: 0.33rem;
 }
 
 .gratuito-link-lista:hover,
@@ -355,6 +371,7 @@ nav ul {
 }
 
 .caixa-titulo-diferenciais {
+  display: flex;
   border-top-left-radius: 5rem;
   border-top-right-radius: 5rem;
   padding: 4.88rem;
@@ -362,6 +379,9 @@ nav ul {
   color: white;
 }
 
+.diferenciais-p {
+  margin-top: 5px;
+}
 .caixa-restante-diferenciais {
   padding: 4.88rem;
 }
