section o que falam

--- a/Portal Hashtag/home-hashtag.css
+++ b/Portal Hashtag/home-hashtag.css
@@ -87,6 +87,7 @@ input::placeholder {
 
 .container-diferenciais,
 .container-blog {
+  max-width: 106rem;
   border-radius: 5rem;
   box-shadow: inset 0 0 0.8rem 0.3rem rgba(0, 0, 0, 0.15);
 }
@@ -367,31 +368,52 @@ nav ul {
 /* Seção Diferenciais */
 
 .container-diferenciais {
+  max-width: 100;
   background-color: white;
 }
 
 .caixa-titulo-diferenciais {
   display: flex;
+  gap: 4.88rem;
   border-top-left-radius: 5rem;
   border-top-right-radius: 5rem;
   padding: 4.88rem;
+  padding-bottom: 12rem;
   background-image: linear-gradient(225deg, #196b9f, #1a82a7);
   color: white;
 }
 
-.diferenciais-p {
-  margin-top: 5px;
-}
 .caixa-restante-diferenciais {
-  padding: 4.88rem;
+  display: flex;
+  flex-flow: column;
+  gap: 4.88rem;
+  padding: 4.88rem 3.12rem;
 }
 
 .caixa-itens-diferenciais {
+  flex: 1;
+  display: flex;
+  flex-flow: column;
+  gap: 1.6rem;
   position: relative;
   border-radius: 2.5rem;
   background-color: white;
   box-shadow: 0 0 0.8rem 0.3rem rgba(0, 0, 0, 0.15);
-  padding: 3.12rem 2.5rem;
+  padding: 7rem 2.5rem 3.12rem 2.5rem;
+  align-items: center;
+  text-align: center;
+}
+.bloco-itens-diferenciais {
+  display: flex;
+  gap: 2.5rem;
+  align-items: center;
+  margin-top: -10rem;
+}
+
+.caixa-item-diferenciais {
+  display: flex;
+  flex-flow: column;
+  gap: 1.02rem;
 }
 
 .caixa-imagem-diferenciais {
@@ -412,8 +434,14 @@ nav ul {
   width: 100%;
 }
 
+.diferenciais-empresas {
+  display: flex;
+  flex-flow: column;
+  gap: 2.5rem;
+  align-items: center;
+}
 .diferenciais-empresas img {
-  height: 5rem;
+  height: 3rem;
   filter: grayscale(100%);
 }
 
@@ -428,8 +456,15 @@ nav ul {
 }
 
 .caixa-diferenciais-h2 {
+  flex: 5;
   border-left: solid 0.5rem #ffb20f;
   padding: 0.52rem 0 0.52rem 1.6rem;
+}
+
+.diferenciais-p {
+  flex: 5;
+  margin-top: 5.2px;
+  text-align: right;
 }
 
 .diferenciais-h3 {
@@ -446,6 +481,13 @@ nav ul {
   font-weight: 700;
   text-decoration: none;
 }
+.bloco-imagens-diferenciais {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 2rem;
+  justify-content: center;
+  padding: 0 10rem;
+}
 
 /* Seção O que falam */
 
@@ -455,16 +497,36 @@ nav ul {
   background-repeat: no-repeat;
   background-size: cover;
 }
+.container-oquefalam {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  gap: 3.12rem;
+}
 
 .oquefalam-titulo {
   color: white;
+  display: flex;
+  gap: 1.6rem;
+  align-items: center;
 }
 
 .oquefalam-carrossel {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
   position: relative;
+  align-self: stretch;
+  gap: 2rem;
+}
+.oquefalam-carrossel-imagens {
+  display: flex;
+  align-self: stretch;
+  gap: 2rem;
 }
 
 .oquefalam-carrossel-img {
+  flex: 1;
   background-color: #7489af;
   background-blend-mode: multiply;
   position: relative;
@@ -472,7 +534,6 @@ nav ul {
   background-position: 50%;
   background-size: cover;
   aspect-ratio: 16/9;
-  width: 33%;
   border-radius: 2.5rem;
 }
 
