--- a/Portal Hashtag/home-hashtag.css
+++ b/Portal Hashtag/home-hashtag.css
@@ -701,6 +701,21 @@ nav ul {
   padding: 7.63rem 2rem;
 }
 
+.container-comoajudar-2,
+.container-comoajudar {
+  width: 86rem;
+  display: flex;
+  flex-flow: column;
+}
+.container-comoajudar {
+  align-items: center;
+  gap: 3.12rem;
+}
+
+.container-comoajudar-2 {
+  gap: 1.6rem;
+}
+
 .caixa-comoajudar-h2 {
   display: inline-block;
   padding: 0.42rem 1.6rem;
@@ -711,6 +726,9 @@ nav ul {
 }
 
 .comoajudar-lista {
+  display: flex;
+  flex-flow: column;
+  gap: 1.28rem;
   border-radius: 2.5rem;
   box-shadow: inset 0 0 0.8rem 0.15rem rgba(0, 0, 0, 0.15);
   padding: 2.5rem;
@@ -731,6 +749,14 @@ nav ul {
 .comoajudar-paragrafo a:active {
   color: #0056b3;
 }
+.comoajudar-lista li {
+  display: flex;
+  align-items: start;
+  gap: 0.65rem;
+}
+.comoajudar-lista li img {
+  transform: translateY(40%);
+}
 
 .comoajudar-paragrafo b {
   font-weight: 600;
@@ -743,7 +769,34 @@ nav ul {
   color: white;
 }
 
+.container-minicurso {
+  display: flex;
+  flex-flow: column;
+  gap: 3.12rem;
+  align-items: center;
+  justify-content: ;
+}
+
+.form-minicurso {
+  align-self: stretch;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 2rem;
+}
+
+form div {
+  display: flex;
+  flex-flow: column;
+  gap: 0.81rem;
+}
+
+form div label {
+  margin-left: 0.5rem;
+}
+
 .botao-minicurso {
+  align-self: flex-end;
   background-color: #ffba29;
   border-bottom-color: #664a10;
   border-right-color: #664a10;
