--- a/Portal Hashtag/home-hashtag.css
+++ b/Portal Hashtag/home-hashtag.css
@@ -807,8 +807,55 @@ form div label {
 
 /* Rodapé */
 
+.container-rodape {
+  width: 106rem;
+  display: flex;
+  align-items: start;
+  gap: 4.88rem;
+}
+
 .logo-footer {
   width: 18rem;
+}
+
+.subsecao-rodape,
+.subsecao-cursosonline,
+.subsecao-assistente,
+.rodape-div-iconelink,
+.rodape-coluna {
+  display: flex;
+  flex-flow: column;
+}
+
+.rodape-coluna {
+  gap: 3.12rem;
+}
+
+.subsecao-rodape {
+  gap: 1.6rem;
+}
+
+.subsecao-cursosonline {
+  gap: 1.28rem;
+}
+
+.subsecao-assistente {
+  gap: 1.02rem;
+}
+
+.rodape-div-iconelink {
+  gap: 0.65rem;
+}
+
+.rodape-iconelink {
+  display: flex;
+  align-items: center;
+  gap: 0.65rem;
+}
+
+.rodape-redessociais {
+  display: flex;
+  gap: 0.82rem;
 }
 
 .rodape-titulo,
@@ -821,8 +868,17 @@ form div label {
   color: #1a77a4;
 }
 
+.rodape-copyright {
+  text-align: center;
+}
+
 .rodape svg {
   width: 2.4rem;
+}
+
+.link-redessociais svg {
+  fill: #404040;
+  stroke: #404040;
 }
 
 .link-redessociais:hover svg {
@@ -843,6 +899,10 @@ form div label {
 }
 
 .form-newsletter {
+  display: flex;
+  flex-flow: column;
+  align-items: center;
+  gap: 1.6rem;
   border-radius: 2.5rem;
   box-shadow: inset 0 0 0.8rem 0.15rem rgba(0, 0, 0, 0.15);
   padding: 2.5rem;
